--- a/test_veriff.html
+++ b/test_veriff.html
@@ -20,8 +20,7 @@
 </head>
 <body>
 
-    <div id='veriff-root' style="width:1000px">
-    .centered-element</div>
+    <div id='veriff-root' style="width:1000px"></div>
 
     <script>
         const veriff = Veriff({
